------------
-- 2.3.1 --
------------

* Backend:
	* initctl is disabled (replaced with /bin/true) during chroot sessions.
	  With this change is now possible to install mysql/apache and other
	  services in the guest system.
	* Backend now checks for kpackagekit as packaging tool, too.
	  Note: This requires that packagekit ist installed on the hosting
	  system - otherwise the dbus queries to packagekitd will fail.
	  FIXME: Running packagekitd on the host will give wrong results!!!
	  --> We need to change the strategy here! Upstart has similar issues
	  --> need to start "private" dbus system bus instance?!?
	* Added error checking for arguments to uck-remaster-mount.
	* improved error checking and handling for union mounts: either all or
	  nothing now; imply -m if tell-tale directory (-cache) is found;
	  made reentrant for use by uck-flow; pointless check for
	  uck-remaster-mount removed; fallback to copy if union mount not
	  possible; do not remove target when using mounts.
	* uck-remaster-remove-win32-files now removes usb-creator.exe which
	  was added in maverick
	* Fixed immediate umount in uck-remaster-unpack-{iso,rootfs} by trap
	  EXIT handling when using -m.
* Package:
	* gfxboot-dev dep added for maverick
* Internal:
	* New target updman in Makefile to update manual page version numbers.

------------
-- 2.3.0 --
------------

* GUI:
	* GUI now uses kdialog, zenity, dialog or builtin (in that order) if
	  available. (#577197)
	* Updated uck-gui to accept parameters for loopback/unionfs mounting
	  and added the possibility to specify a directory different from ~/tmp
	  for remaster-dir. Change is backward compatible to uck-2.2.0.
	  (Question/Answer 110374)

* Backend:
	* Sequence of actions in uck-remaster changed so that initrd is
	  unpacked/customized/packed after the changes to the root file system
	  and the ISO have been done. This avoids problems when customize_iso
	  installs a new Live-CD kernel and initrd (which would previously be